# AWSEC2Panel

./: .gitignore  README.md
Backend/: backend.py  ec2Utils.js  index.js  index.ts  old-express.js  package-lock.json  package.json  pyproject.toml  readme.md  trpc.js  tsconfig.json
Frontend/: core.js  index.html  package-lock.json  package.json  styles.css
Frontend/app/: layout.tsx  page.tsx  trpcClient.tsx
Frontend/app/components/: Button.tsx  ServerSlab.jsx  ServerSlab.tsx  ServersPanel.jsx  ServersPanel.tsx  Test.tsx
Frontend/server/: index.js
