[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Blake <80996688+BlakeTnr@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
boto3 = "^1.34.151"
flask = "^3.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
